--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,11 +1,11 @@
-name: CI Pipeline
+name: CI/CD Pipeline
 
 on:
   push:
     branches: [ master ]
 
 jobs:
-  build:
+  build-and-push:
 
     runs-on: ubuntu-latest
 
@@ -13,24 +13,21 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+
+    - name: Login to DockerHub
+      uses: docker/login-action@v2
       with:
-        python-version: '3.9'
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+    - name: Build and push Docker image
+      uses: docker/build-push-action@v4
+      with:
+        push: true
+        tags: yourdockerhubusername/notes-app:latest
 
-    - name: Run tests
-      run: |
-        echo "Add your test commands here, e.g. pytest"
-
-    - name: Build Docker image
-      run: |
-        docker build -t notes-app .
-        
   deploy:
     needs: build-and-push
     runs-on: ubuntu-latest
@@ -45,5 +42,3 @@ jobs:
         script: |
           cd /home/ec2-user/notes-app
           ./deploy.sh
-
-    # Optional: push Docker image to Docker Hub or GitHub Container Registry here
