--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
       uses: docker/build-push-action@v4
       with:
         push: true
-        tags: yourdockerhubusername/notes-app:latest
+        tags: ashrafahamed/notes-app:latest
 
   deploy:
     needs: build-and-push
